--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -32,7 +32,7 @@
 .link{
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 25%;
     /* padding: 1%; */
 }
 
@@ -55,8 +55,13 @@
         flex-direction: column;
         align-items: center;
     }
+    .text h2 {
+        font-size: 22px;
+        letter-spacing: 2px;
+      }
     .link{
-        align-items: center;
+        gap: 10px;
+       
     }
     .link a{
         font-size: 15px;
