--- a/src/Component/Experience/Experience.css
+++ b/src/Component/Experience/Experience.css
@@ -155,5 +155,16 @@
     gap: 8px;
      
     }
+    .projectdetailsItemDetails h3 {
+      font-size: 22px;
+    }
+    .projectdetailsItemDetails p {
+      font-size: 12px;
+    }
+    .explist {
+      font-size: 16px;
+      padding-bottom: 7px;
+    }
   }
+  
   
