--- a/src/Component/Contact/Contact.css
+++ b/src/Component/Contact/Contact.css
@@ -55,6 +55,9 @@
         flex-direction: column;
         align-items: center;
     }
+    .text p{
+        margin-left: 1%;
+    }
     .text h2 {
         font-size: 22px;
         letter-spacing: 2px;
